-Added subsection headers for the whole solutions manual

--- a/Ch5.tex
+++ b/Ch5.tex
@@ -1,5 +1,6 @@
-\question{5.1.1}
+\subsection{Cardinal Arithmetic}
 
+\question{5.1.1}
 \begin{solution}
     For solutions (a) through (c) suppose that
     \ali{
@@ -693,8 +694,8 @@
     Since $S$ is countable it then follows that $\pset{\pset{A}}$ is Dedekind infinite by Exercise~5.1.10.
 \end{solution}
 
+\subsection{The Cardinality of the Continuum}
 \question{5.2.1}
-
 \begin{solution}
 	Let $F$ denote the set of all finite sets of reals.
     First we construct an injective $f: F \to \reals^\nats$
