--- a/Ch6.tex
+++ b/Ch6.tex
@@ -1,5 +1,6 @@
-\question{6.1.1}
+\subsection{Well-Ordered Sets}
 
+\question{6.1.1}
 \begin{solution}
     Clearly $L = \reals$ is a linearly ordered set.
     So let
@@ -391,8 +392,9 @@
     So it must be that $W$ and $W'$ are not isomorphic. \qedsymbol
 \end{solution}
 
-\question{6.2.1}
+\subsection{Ordinal Numbers}
 
+\question{6.2.1}
 \begin{solution}
 	($\to$) Suppose that $X$ is a transitive set and consider any $x \in X$.
     Then $x \ss X$ since $X$ is transitive.
@@ -563,8 +565,9 @@
     Thus we have shown that $\a = \bigcap X$ as desired. \qedsymbol
 \end{solution}
 
-\question{6.3.1}
+\subsection{The Axiom of Replacement}
 
+\question{6.3.1}
 \begin{solution}
 	Define a property $\prop{R}(x,y)$ such that $\prop{R}(x,y)$ holds if and only if
     \begin{enumerate}
@@ -737,8 +740,9 @@
     Clearly then $X \in \bigcup_{k \in \w} V_k = V_\w$. \qedsymbol
 \end{solution}
 
-\question{6.4.1}
+\subsection{Transfinite Induction and Recursion}
 
+\question{6.4.1}
 \begin{solution}
     \def\P{\prop{P}}
     \def\G{\prop{G}}
@@ -906,8 +910,9 @@
     This completes the proof. \qedsymbol
 \end{solution}
 
-\question{6.5.1}
+\subsection{Ordinal Arithmetic}
 
+\question{6.5.1}
 \begin{solution}
     \begin{statement}{Lemma 6.5.1.1}
         $0 \cdot \a = 0$ for all ordinals $\a$.
@@ -2655,8 +2660,9 @@
     It would seem that Theorem~6.6.4 (the normal form) is a special case of this in which the base is $\w$.
 \end{solution}
 
-\question{6.6.1}
+\subsection{The Normal Form}
 
+\question{6.6.1}
 \begin{solution}
 	This was shown in Exercise~6.5.15c.
 \end{solution}
