--- a/Ch7.tex
+++ b/Ch7.tex
@@ -1,7 +1,8 @@
+\subsection{Initial Ordinals}
+
 \def\ex{7.1.1}
 \setcounter{itm}{0}
 \question{\ex}
-
 \begin{solution}
     \begin{statement}{Lemma~\ex.\itm{lem:infwo:succ}}
         If $\a$ is an infinite ordinal then $\abs{\a} = \abs{\a+1}$, i.e. $\a$ and $\a+1$ are equipotent.
@@ -448,6 +449,8 @@
 
     It follows from what has been shown that indeed $\a = \hs(A)$. \qedsymbol
 \end{solution}
+
+\subsection{Addition and Multiplication of Alephs}
 
 \def\ex{7.2.1}
 \setcounter{itm}{0}
