--- a/theorems.tex
+++ b/theorems.tex
@@ -612,5 +612,7 @@
     It then follows from Lemma~7.1.9.4.T that there is a $\g < \a$ such that $\W = \w_\g$. \qedsymbol
 \end{solution}
 
+%\section{The Axiom of Choice}
+
 \end{questions}
 \end{document}
