-Changed all statements to use new numbering use theorem environments -Moved all solutions content from chapter tex files to section tex files -Restructured statements used by both solutions and theorems documents so they are duplicated in each but no latex code is duplicated -Updated lemmas.py to read the new solutions and theorems tex files -Added title pages to all documents

--- a/lemmas.tex
+++ b/lemmas.tex
@@ -5,11 +5,14 @@
 \usepackage{color}
 \usepackage[margin=0.75in]{geometry}
 \usepackage{parskip}
+\usepackage{calc}
 
 \input{macros}
 
-\newcounter{itm}
-\newcommand{\itm}[1]{\refstepcounter{itm}\label{#1}\arabic{itm}}
+\newtheorem{lem}{Lemma}[subsection]
+\newtheorem{defin}[lem]{Definition}
+\newtheorem{cor}[lem]{Corollary}
+\newtheorem{thrm}[lem]{Theorem}
 
 \begin{document}
 \input{lemmas_content}
