-Added proof of Theorem 8.1.13 -Added solution for exercise 8.1.2

--- a/errata.tex
+++ b/errata.tex
@@ -29,6 +29,14 @@
 
 \item Page 140, bottom. The reference to Assumption~1.7 in Chapter~4 should really be Assumption~1.8. (Unconfirmed)
 
+\item Page 142, bottom. The reference to Theorem~4.4 in Chapter~7 should be Theorem~4.4 in Chapter~6. (Unconfirmed)
+
+\item Page 143 top. In the proof of Theorem~8.1.13 when showing that (c) implies (a) the sentence, ``Let $F$ be the system of all functions $f$ for which $\dom{f} \ss S$ and $f(X) \in X$ holds for any $X \in S$.'' should be, ``\ldots and $f(X) \in X$ holds for any $X \in \dom{f}$.''
+  This is because, if $\dom{f} \pss S$, then there is an $X \in S$ where $X \notin \dom{f}$ so that $f(X)$ is not defined. (Unconfirmed)
+
+\item Page 143, middle. In the proof of Theorem~8.1.14 there are two times in the first paragraph where statements are made for all or for some $\x \in A$.
+  These should be $\x < \l$. (Unconfirmed)
+  
 \end{enumerate}
 
 \end{document}
