--- a/macros.tex
+++ b/macros.tex
@@ -33,8 +33,8 @@
 \def\where{\,|\,}
 
 % Other stuff
-\def\dom{\mathrm{dom}}
-\def\ran{\mathrm{ran}}
+\def\dom{\mathrm{dom}\,}
+\def\ran{\mathrm{ran}\,}
 
 % Cardinality shortcuts
 \def\cnats{{\al_0}}
@@ -60,9 +60,12 @@
 % This is needed so that half-open intervals do not cause auto-indentation issues due to unmatched brackets
 \newcommand\clop[1]{[#1)}
 
+% Other miscellaneous stuff
 \def\ss{\subseteq}
 \def\pss{\subset}
 \def\Seq{\mathrm{Seq}}
+\def\prece{\preccurlyeq}
+\def\sd{\,\triangle\,}
 
 % Environment shortcuts
 \newcommand\gath[1]{\begin{gather*} #1 \end{gather*}}
