--- a/sections/sec_6_1.tex
+++ b/sections/sec_6_1.tex
@@ -199,12 +199,12 @@
     Otherwise if $A_1$ is empty then $A_2$ is not and it has a least element $a$ since it is a non-empty subset of the well-ordered $(W_2, <_2)$.
     Now consider any $b \in A$ so that also $b \in W$.
     If $b \in W_1$ then $b \in A_1$ so that $A_1$ is not empty.
-    In this case since $a$ is the least element of $A_1$ we have $a \leq_1 b$ so that by definition $a \preceq b$.
+    In this case since $a$ is the least element of $A_1$ we have $a \leq_1 b$ so that by definition $a \prece b$.
     On the other hand if $b \in W_2$ then $b \in A_2$.
-    If $A_1$ was empty then $a$ is the least element of $A_2$ and $b \in A_2$ so that again $a \leq_2 b$, hence by definition $a \preceq b$.
+    If $A_1$ was empty then $a$ is the least element of $A_2$ and $b \in A_2$ so that again $a \leq_2 b$, hence by definition $a \prece b$.
     If $A_1$ is not empty then $a \in A_1 \ss W_1$ so that by the definition of the sum $(W, \prec)$ we have that $a \prec b$ since $b \in W_2$.
-    Hence also $a \preceq b$.
-    Thus in all cases $a \preceq b$ so that $a$ is the least element of $A$ since $b$ was arbitrary.
+    Hence also $a \prece b$.
+    Thus in all cases $a \prece b$ so that $a$ is the least element of $A$ since $b$ was arbitrary.
 
     Now we show that $(W, \prec)$ is isomorphic to $(\w + \w, <)$.
     First, since $(W_1, <_1)$ and $(W_2, <_2)$ are both isomorphic to $(\nats, <)$ let $f_1 : W_1 \to \nats$ and $f_2 : W_2 \to \nats$ be isomorphisms.
