--- a/sections/sec_7_2.tex
+++ b/sections/sec_7_2.tex
@@ -157,12 +157,12 @@
       Thus $f_1(x) = \a \leq f_1(y)$ since $\a$ is the least element of $B$.
       Clearly if $f_1(x) = f_1(y)$ then $x = y$ since $f_1$ is bijective.
       On the other hand if $f_1(x) < f_1(y)$ then by definition $x \prec y$.
-      Hence in either case we have $x \preceq y$.
+      Hence in either case we have $x \prece y$.
 
       Case: $y \in A_2$.
       Then $y \in X \cap A_2$ so that $f_2(y) \in f_2[X \cap A_2]$ so that $f_2(y) \in B$.
       Thus $f_1(x) = \a \leq f_2(y)$ so that by definition $x \prec y$.
-      Hence again $x \preceq y$ is true.
+      Hence again $x \prece y$ is true.
     \end{indpar}
 
     Case: $\a \notin f_1[X \cap A_1]$.
@@ -175,14 +175,14 @@
       Then $y \in X \cap A_1$ so that $f_1(y) \in f_1[X \cap A_1]$ so $f_1(y) \in B$.
       Thus $f_2(x) = \a \leq f_1(y)$ since $\a$ is the least element of $B$.
       Now, it cannot be that $f_2(x) = \a = f_1(y)$ for then $\a$ would be in $f_1[X \cap A_1]$.
-      So it must be that $f_2(x) = \a < f_1(y)$ so that by definition $x \prec y$ so that $x \preceq y$ is true.
+      So it must be that $f_2(x) = \a < f_1(y)$ so that by definition $x \prec y$ so that $x \prece y$ is true.
 
       Case: $y \in A_2$.
       Then $y \in X \cap A_2$ so that $f_2(y) \in f_2[X \cap A_2]$ so that $f_2(y) \in B$.
       Thus $f_2(x) = \a \leq f_2(y)$.
       Then if $f_2(x) = \a = f_2(y)$ then $x = y$ since $f_2$ is bijective.
       On the other hand if $f_2(x) = \a < f_2(y)$ then $x \prec y$ by definition.
-      In either case we have $x \preceq y$.
+      In either case we have $x \prece y$.
     \end{indpar}
     Hence in all cases we have shown that $X$ has a $\prec$-least element so that $\prec$ is a well-ordering of $A$.
 
